fix: related title overflow

--- a/blocks/cards/cards.css
+++ b/blocks/cards/cards.css
@@ -18,6 +18,7 @@
     border-radius: 10px;
     background-color: #ddd;
     cursor: pointer;
+    overflow: hidden;
 }
 
 .cards .cards-card:hover {
